# wgvpn

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
wgbind/: .gitignore  Cargo.toml  Readme.md  build.rs
wgbind/src/: bindings.rs  lib.rs  wireguard_device.rs
wgbind/wg/: wireguard.h
wgbindraw-sys/: Cargo.toml  ReadMe.md  build.rs  license
wgbindraw-sys/src/: bindings.rs  lib.rs
