[package]
name = "wgbind"
version = "0.1.2"
edition = "2021"
license = "MIT" 
authors = ["Johannes Lüke"]
repository = "https://github.com/Johanneslueke/wgvpn"
readme = "Readme.md"
description = "Wireguard bindings and wrapper around bindings for safe access - WIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.150"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0"