[package]
name = "wgbind"
version = "0.1.3"
edition = "2021"
license = "MIT" 
authors = ["Johannes Lüke"]
repository = "https://github.com/Johanneslueke/wgvpn"
readme = "Readme.md"
description = "Wireguard bindings and wrapper around bindings for safe access - WIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.150"
wgbindraw-sys = "0.1.0"
 
 