[package]
name = "wgbind"
version = "0.2.1"
edition = "2021"
license = "MIT" 
authors = ["Johannes Lüke"]
repository = "https://github.com/Johanneslueke/wgvpn"
readme = "Readme.md"
description = "Wireguard bindings and wrapper around bindings for safe access - WIP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
libc = "0.2.150"
wgbindraw-sys = "0.2.1"
 
 